Add gather button

--- a/ditm-panel.html
+++ b/ditm-panel.html
@@ -7,9 +7,16 @@
   <body>
     <div id="saved-box">
       <label for="stored-urls">Saved:</label>
-      <div id="urls-box">
+      <div id="stored-urls-box">
         <select id="stored-urls"></select>
       </div>
+    </div>
+    <div id="saved-box">
+      <label for="stored-urls">Used:</label>
+      <div id="used-urls-box">
+        <select id="used-urls"></select>
+      </div>
+      <input id="gather" type="button" value="Gather"><br>
     </div>
     <div id="url-box">
       <label for="url">URL:</label>
