Add status text

--- a/ditm-panel.html
+++ b/ditm-panel.html
@@ -26,6 +26,7 @@
     <div id="action-box">
       <input id="save" type="button" value="Save">
       <input id="remove" type="button" value="Remove">
+      <span id="status"></span>
     </div>
     <div id="content-box">
       <textarea id="content"></textarea>
