Reload used list on navigation

--- a/ditm-panel.html
+++ b/ditm-panel.html
@@ -16,7 +16,7 @@
       <div id="used-urls-box">
         <select id="used-urls"></select>
       </div>
-      <input id="gather" type="button" value="Gather"><br>
+      <input id="gather" type="button" value="Reload list"><br>
     </div>
     <div id="url-box">
       <label for="url">URL:</label>
