Add pretty print feature (fixes #6)

--- a/ditm-panel.html
+++ b/ditm-panel.html
@@ -26,6 +26,7 @@
     <div id="action-box">
       <input id="save" type="button" value="Save">
       <input id="remove" type="button" value="Remove">
+      <input id="pretty" type="button" value="Pretty print JS source">
       <span id="status"></span>
     </div>
     <div id="source-chooser">
