Fix http command style

--- a/ditm-panel.html
+++ b/ditm-panel.html
@@ -55,9 +55,8 @@
       </div>
       To use local file, run HTTP server with the following command, and use <code>http://localhost:8000/{FILENAME}</code>.
       <pre>
-        $ cd {DIRECTORY_THAT_CONTAINS_THE_FILE}
-        $ python -m SimpleHTTPServer 8000
-      </pre>
+$ cd {DIRECTORY_THAT_CONTAINS_THE_FILE}
+$ python -m SimpleHTTPServer 8000</pre>
     </div>
     <div id="status"></div>
     <script src="ditm-panel.js"></script>
