Add reference for resources

--- a/ditm-panel.html
+++ b/ditm-panel.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="theme-dark">
+<html>
   <head>
     <meta charset="utf-8">
     <script src="ditm-panel-theme.js"></script>
@@ -10,6 +10,7 @@
     <link href="devtools-tooltips.css" rel="stylesheet" type="text/css">
     <link href="debugger-App.css" rel="stylesheet" type="text/css">
     <link href="debugger-Tabs.css" rel="stylesheet" type="text/css">
+    <link href="devtools-theme.css" rel="stylesheet" type="text/css">
     <link href="ditm-panel.css" rel="stylesheet" type="text/css">
   </head>
   <body class="theme-body">
