Remove referece to browser resources

--- a/ditm-panel.html
+++ b/ditm-panel.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html class="theme-light">
   <head>
     <meta charset="utf-8">
     <script src="ditm-panel-theme.js"></script>
-    <link href="devtools-variables.css" rel="stylesheet" type="text/css">
-    <link href="debugger-variables.css" rel="stylesheet" type="text/css">
     <link href="devtools-common.css" rel="stylesheet" type="text/css">
+    <link href="devtools-splitters.css" rel="stylesheet" type="text/css">
+    <link href="devtools-theme.css" rel="stylesheet" type="text/css">
     <link href="devtools-toolbars.css" rel="stylesheet" type="text/css">
     <link href="devtools-tooltips.css" rel="stylesheet" type="text/css">
+    <link href="devtools-variables.css" rel="stylesheet" type="text/css">
     <link href="debugger-App.css" rel="stylesheet" type="text/css">
     <link href="debugger-Tabs.css" rel="stylesheet" type="text/css">
-    <link href="devtools-theme.css" rel="stylesheet" type="text/css">
+    <link href="debugger-variables.css" rel="stylesheet" type="text/css">
     <link href="ditm-panel.css" rel="stylesheet" type="text/css">
   </head>
   <body class="theme-body">
