Unify toolbar styling

--- a/ditm-panel.html
+++ b/ditm-panel.html
@@ -130,7 +130,7 @@ $ python3 ditm-replicate.py && cd ditm-replica && python3 -m http.server {PORT}<
       <input id="source-replicate-port" class="devtools-textinput" type="text" value="8000" size="6">
     </div>
     <div id="source-log-box" style="display: none">
-      <div id="log-toolbar">
+      <div class="devtools-toolbar">
         <button id="log-clear" class="devtools-button" title="Clear log"></button>
       </div>
       <div id="log-box">
