Add JSON file to load replicate

--- a/ditm-panel.html
+++ b/ditm-panel.html
@@ -125,7 +125,7 @@ $ python3 ditm-replicate.py && cd ditm-replica && python3 -m http.server {PORT}<
 
       <label class="inline">Configuration:</label>
       <input type="checkbox" id="source-replicate-server" checked>
-      <label class="inline" for="source-replicate-server">Run server automatically</label>
+      <label class="inline" for="source-replicate-server">Run server automatically in <code>ditm-replicate.py</code></label>
       <label class="inline" for="source-replicate-port">using port</label>
       <input id="source-replicate-port" class="devtools-textinput" type="text" value="8000" size="6">
     </div>
