Fix balloon styling (fixes #25)

--- a/ditm-panel.html
+++ b/ditm-panel.html
@@ -77,17 +77,15 @@
         <div id="source-url-more-box">
           <button id="source-url-more" class="devtools-button" title="More"></button>
           <div class="tooltip-xul-wrapper">
-            <div class="tooltip-xul-wrapper-inner">
-              <div id="source-url-menu-container" class="tooltip-container tooltip-container-xul tooltip-bottom" type="doorhanger">
-                <div class="tooltip-panel">
-                  <div class="menu-standard-padding" role="menu">
-                    <li class="menuitem" role="presentation">
-                      <button id="source-url-clear-history" class="command" role="menuitem"><span class="label">Clear history</span></button>
-                    </li>
-                  </div>
+            <div id="source-url-menu-container" class="tooltip-container tooltip-bottom" type="doorhanger">
+              <div class="tooltip-panel">
+                <div class="menu-standard-padding" role="menu">
+                  <li class="menuitem" role="presentation">
+                    <button id="source-url-clear-history" class="command" role="menuitem"><span class="label">Clear history</span></button>
+                  </li>
                 </div>
-                <div class="tooltip-arrow"></div>
               </div>
+              <div class="tooltip-arrow"></div>
             </div>
           </div>
         </div>
